--- a/indexnew.html
+++ b/indexnew.html
@@ -19,12 +19,11 @@
     <h1>cvni81</h1>
     <p>Hi! Welcome to my slice of the web where i put stuff i like, stuff i do and other things too!<br>
     Making this website has been really fun, and i hope you like having a gander at it.<br>
-    (put this stuff in an about page i guess)
+    <details><summary>(put this stuff in an about page i guess)</summary>
     I speak Portuguese (native), English (near-native) and toki pona (proficient).<br>
     Also, i've liked coding for a while now; mainly in python and pygame mostly because they're easy, but now also html and css i guess!<br>
     Favorite passtimes include: (ul)chatting in discord, listening to music, working on this website, doodling things and seeing new places!(/ul)<br>
-    Regarding gender and things, i'm... kinda confused. Non-binary i guess. Use they/them just to be sure.<br>
-    (/put this stuff in an about page i guess)<br>
+    Regarding gender and things, i'm... kinda confused. Non-binary i guess. Use they/them just to be sure.</details><br>
     This thing has been pretty much always in construction since i've started it, so things may appear and disappear from time to time. It's normal around here i guess.<br>
     Make yourself at home!</p>
     </div>
