--- a/indexnew.html
+++ b/indexnew.html
@@ -11,20 +11,22 @@
             font-style: normal;}
             .all{display: grid;
             grid-template-columns: 350px 1px auto}
+            body{min-height:100vh;
+            margin:0px;}
         </style></head>
 
-    <body style="margin:0px">
+    <body>
     <div class="all">
-    <div style="padding:20px; background-color: #404040;">
+    <div style="padding:20px; background-color: #404040; min-height:100vh">
     <h1>cvni81</h1>
     <p>Hi! Welcome to my slice of the web where i put stuff i like, stuff i do and other things too!<br>
-    Making this website has been really fun, and i hope you like having a gander at it.<br>
+    Making this website has been really fun, and i hope you like having a gander at it.<br></p>
     <details><summary>(put this stuff in an about page i guess)</summary>
     I speak Portuguese (native), English (near-native) and toki pona (proficient).<br>
     Also, i've liked coding for a while now; mainly in python and pygame mostly because they're easy, but now also html and css i guess!<br>
     Favorite passtimes include: (ul)chatting in discord, listening to music, working on this website, doodling things and seeing new places!(/ul)<br>
     Regarding gender and things, i'm... kinda confused. Non-binary i guess. Use they/them just to be sure.</details><br>
-    This thing has been pretty much always in construction since i've started it, so things may appear and disappear from time to time. It's normal around here i guess.<br>
+    <p>This thing has been pretty much always in construction since i've started it, so things may appear and disappear from time to time. It's normal around here i guess.<br>
     Make yourself at home!</p>
     </div>
     <div style="border:solid #f0f0f0 2px"></div>
