--- a/indexnew.html
+++ b/indexnew.html
@@ -8,7 +8,8 @@
         <link href="/mute-ante/style.css" rel="stylesheet" type="text/css" media="all"><style>
             p, details{line-height: 1.5}
             h1{font-size: 70px;
-            font-style: normal;}
+            font-style: normal;
+            margin-top: 20px}
             .all{display: grid;
             grid-template-columns: 350px 1px auto}
             body{min-height:100vh;
@@ -17,7 +18,7 @@
 
     <body>
     <div class="all">
-    <div style="padding:20px; background-color: #202020; min-height:100vh">
+    <div style="background-color: #202020; min-height:100vh">
     <h1 style="text-shadow:#080808 7px 7px">cvni81</h1>
     <p>Hi! Welcome to my slice of the web where i put stuff i like, stuff i do and other things too!<br>
     Making this website has been really fun, and i hope you like having a gander at it.<br></p>
