--- a/indexnew.html
+++ b/indexnew.html
@@ -25,7 +25,7 @@
     <details><summary>(put this stuff in an about page i guess)</summary>
     I speak Portuguese (native), English (near-native) and toki pona (proficient).<br>
     Also, i've liked coding for a while now; mainly in python and pygame mostly because they're easy, but now also html and css i guess!<br>
-    Favorite passtimes include: (ul)chatting in discord, listening to music, working on this website, doodling things and seeing new places!(/ul)<br>
+    Favorite passtimes include: (ul)chatting in discord, listening to music, working on this website, composing stuffs in beepbox, doodling things and seeing new places!(/ul)<br>
     Regarding gender and things, i'm... kinda confused. Non-binary i guess. Use they/them just to be sure.</details>
     <p>This thing has been pretty much always in construction since i've started it, so things may appear and disappear from time to time. It's normal around here i guess. Also it isn't very mobile friendly. Sorry!<br>
     Make yourself at home!</p>
