--- a/indexnew.html
+++ b/indexnew.html
@@ -7,7 +7,7 @@
         <title>≠</title>
         <link href="/mute-ante/style.css" rel="stylesheet" type="text/css" media="all"><style>
             p, details{line-height: 1.5}
-            h1{font-size: 70px;
+            h1{font-size: xxx-large;
             font-style: normal;
             margin-top: 20px}
             .all{display: grid;
@@ -18,8 +18,8 @@
 
     <body>
     <div class="all">
-    <div style="background-color: #202020; min-height:100vh">
-    <h1 style="text-shadow:#080808 7px 7px">cvni81</h1>
+    <div style="padding: 0px 20px; background-color: #202020; min-height:100vh">
+    <h1 style="text-shadow:#080808 5px 5px">cvni81</h1>
     <p>Hi! Welcome to my slice of the web where i put stuff i like, stuff i do and other things too!<br>
     Making this website has been really fun, and i hope you like having a gander at it.<br></p>
     <details><summary>(put this stuff in an about page i guess)</summary>
