--- a/indexnew.html
+++ b/indexnew.html
@@ -19,7 +19,7 @@
     <body>
     <div class="all">
     <div style="padding: 0px 20px; background-color: #202020; min-height:100vh">
-    <h1 style="text-shadow:#080808 5px 5px">cvni81</h1>
+    <h1 style="text-shadow:#080808 5px 5px">cvni81's website</h1>
     <p>Hi! Welcome to my slice of the web where i put stuff i like, stuff i do and other things too!<br>
     Making this website has been really fun, and i hope you like having a gander at it.<br></p>
     <details><summary>(put this stuff in an about page i guess)</summary>
