--- a/indexnew.html
+++ b/indexnew.html
@@ -20,7 +20,7 @@
     <div class="all">
     <div style="padding: 0px 20px; background-color: #202020; min-height:100vh">
     <h1 style="text-shadow:#080808 5px 5px">cvni81's website</h1>
-    <p>Hi! Welcome to my slice of the web where i put stuff i like, stuff i do and other things too!<br>
+    <p>Hi! Welcome to my corner of the web where i put stuff i like, stuff i do and other things too!<br>
     Making this website has been really fun, and i hope you like having a gander at it.<br></p>
     <details><summary>(put this stuff in an about page i guess)</summary>
     I speak Portuguese (native), English (near-native) and toki pona (proficient).<br>
