--- a/indexnew.html
+++ b/indexnew.html
@@ -14,6 +14,8 @@
             grid-template-columns: 350px 1px auto}
             body{min-height:100vh;
             margin:0px;}
+            .button{background: #080808;
+            border: solid #f0f0f0 2px}
         </style></head>
 
     <body>
@@ -29,13 +31,18 @@
     Regarding gender and things, i'm... kinda confused. Non-binary i guess. Use they/them just to be sure.</details>
     <p>This thing has been pretty much always in construction since i've started it, so things may appear and disappear from time to time. It's normal around here i guess. Also this isn't very mobile friendly.<br>
     Make yourself at home!</p>
-    <p>
-        <a href="http://discordapp.com/users/691348576093077535" class="discord" style="font-size:larger" title="talk to me">discord</a><br>
-        <a href="mailto:cvni1981@gmail.com" style="font-size:larger" title="talk to me but slower">email</a><br>
-        <a href="https://open.spotify.com/user/1tqpqbcrw16yda1b4kc4nuu92" class="spotify" style="font-size:larger" title="music i like">spotify</a><br>
-        <a href="https://bandcamp.com/cvni1981" class="bandcamp" style="font-size:larger" title="music i like enough to purchase">bandcamp (fan)</a><br>
-        <a href="https://status.cafe/users/cvni81" class="cafe" style="font-size:larger" title="things i feel like telling people">status.cafe</a>
-    </p>
+    <div style="display: grid; grid-template-columns: 50% 50%">
+        <div class="button">
+        <a href="http://discordapp.com/users/691348576093077535" class="discord" style="font-size:larger" title="talk to me">discord</a></div>
+        <div class="button">
+        <a href="mailto:cvni1981@gmail.com" style="font-size:larger" title="talk to me but slower">email</a></div>
+        <div class="button">
+        <a href="https://open.spotify.com/user/1tqpqbcrw16yda1b4kc4nuu92" class="spotify" style="font-size:larger" title="music i like">spotify</a></div>
+        <div class="button">
+            <a href="https://status.cafe/users/cvni81" class="cafe" style="font-size:larger" title="things i feel like telling people">status.cafe</a></div>
+        <div class="button">
+        <a href="https://bandcamp.com/cvni1981" class="bandcamp" style="font-size:larger" title="music i like enough to purchase">bandcamp (fan)</a></div>
+    </div>
     </div>
     <div style="border:solid #f0f0f0 2px"></div>
     <div></div>
