--- a/indexnew.html
+++ b/indexnew.html
@@ -34,7 +34,7 @@
         <a href="mailto:cvni1981@gmail.com" style="font-size:larger" title="talk to me but slower">email</a>
         <a href="https://open.spotify.com/user/1tqpqbcrw16yda1b4kc4nuu92" class="spotify" style="font-size:larger" title="music i like">spotify</a>
         <a href="https://status.cafe/users/cvni81" class="cafe" style="font-size:larger" title="things i feel like telling people">status.cafe</a></div>
-        <p style="text-align:center;"><a href="https://bandcamp.com/cvni1981" class="bandcamp" style="font-size:larger;" title="music i like enough to purchase">bandcamp (fan)</a></p>
+        <p style="text-align:center; margin-top: 7px"><a href="https://bandcamp.com/cvni1981" class="bandcamp" style="font-size:larger;" title="music i like enough to purchase">bandcamp (fan)</a></p>
     </div>
     <div style="border:solid #f0f0f0 2px"></div>
     <div></div>
