--- a/indexnew.html
+++ b/indexnew.html
@@ -29,12 +29,7 @@
     Favorite passtimes include: (ul)chatting in discord, listening to music, working on this website, composing stuffs in beepbox, doodling things and seeing new places!(/ul)<br>
     Regarding gender and things, i'm... kinda confused. Non-binary i guess. Use they/them just to be sure.</details>
     <p>This thing has been pretty much always in construction since i've started it, so things may appear and disappear from time to time. It's normal around here i guess.<br>Make yourself at home!</p>
-    <div style="display: grid; grid-template-columns: 50% 50%; text-align: center; grid-row-gap: 7px;">
-        <a href="http://discordapp.com/users/691348576093077535" class="discord" style="font-size:larger" title="talk to me">discord</a>
-        <a href="mailto:cvni1981@gmail.com" style="font-size:larger" title="talk to me but slower">email</a>
-        <a href="https://open.spotify.com/user/1tqpqbcrw16yda1b4kc4nuu92" class="spotify" style="font-size:larger" title="music i like">spotify</a>
-        <a href="https://status.cafe/users/cvni81" class="cafe" style="font-size:larger" title="things i feel like telling people">status.cafe</a></div>
-        <p style="text-align:center; margin-top: 7px"><a href="https://bandcamp.com/cvni1981" class="bandcamp" style="font-size:larger;" title="music i like enough to purchase">bandcamp (fan)</a></p>
+    <p><b>discord</b>: @cvni81#4837<br><b>email</b>: cvni81@gmail.com</p>
     </div>
     <div style="border:solid #f0f0f0 2px"></div>
     <div></div>
