--- a/indexnew.html
+++ b/indexnew.html
@@ -4,7 +4,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet"> 
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8">
-        <title>≠</title>
+        <title>dingus</title>
         <link href="/mute-ante/style.css" rel="stylesheet" type="text/css" media="all"><style>
             p, details{line-height: 1.5}
             h1{font-size: xxx-large;
@@ -32,6 +32,16 @@
     <p><b>discord</b>: @cvni81#4837<br><b>email</b>: cvni81@gmail.com</p>
     </div>
     <div style="border:solid #f0f0f0 2px"></div>
-    <div></div>
+    <div>
+        <a href="/mute-ante/interests">interests</a> things i'm interested in<br>
+        <a href="/mute-ante/musicians">musicians</a> good music people<br>
+        <a href="/mute-ante/websites">websites</a> cool websites i've collected<br>
+        <a href="/mute-ante/blender">blender</a> things i've made in blender<br>
+        <a href="/mute-ante/nimi-mute">nimi mute</a> texts in toki pona<br>
+        <a href="/mute-ante/difference">difference</a> why it matters<br>
+        <a href="https://cvni81.123guestbook.com/">guestbook</a> say hi!<br>
+        <a href="/mute-ante/sitelog">sitelog</a> changes to the site<br>
+        <a href="/mute-ante/i">{i} (the basement)</a>
+    </div>
     </div>
     </body>
