--- a/indexnew.html
+++ b/indexnew.html
@@ -4,7 +4,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet"> 
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8">
-        <title>dingus</title>
+        <title>cvni81</title>
         <link href="/mute-ante/style.css" rel="stylesheet" type="text/css" media="all"><style>
             p, details{line-height: 1.5}
             h1{font-size: xxx-large;
@@ -32,7 +32,7 @@
     <p><b>discord</b>: @cvni81#4837<br><b>email</b>: cvni81@gmail.com</p>
     </div>
     <div style="border:solid #f0f0f0 2px"></div>
-    <div>
+    <div style="font-size:larger; padding-left: 20px; display: flex; align-items: center;">
         <a href="/mute-ante/interests">interests</a> things i'm interested in<br>
         <a href="/mute-ante/musicians">musicians</a> good music people<br>
         <a href="/mute-ante/websites">websites</a> cool websites i've collected<br>
