--- a/indexnew.html
+++ b/indexnew.html
@@ -32,7 +32,7 @@
     <p><b>discord</b>: @cvni81#4837<br><b>email</b>: cvni81@gmail.com</p>
     </div>
     <div style="border:solid #f0f0f0 2px"></div>
-    <div style="font-size:larger; padding-left: 20px; display: flex; align-items: center;">
+    <div style="font-size:x-large; padding-left: 20px; margin: auto 0;">
         <a href="/mute-ante/interests">interests</a> things i'm interested in<br>
         <a href="/mute-ante/musicians">musicians</a> good music people<br>
         <a href="/mute-ante/websites">websites</a> cool websites i've collected<br>
