--- a/indexnew.html
+++ b/indexnew.html
@@ -33,15 +33,18 @@
     </div>
     <div style="border:solid #f0f0f0 2px"></div>
     <div style="font-size:x-large; padding-left: 20px; margin: auto 0;">
-        <a href="/mute-ante/interests">interests</a> things i'm interested in<br>
+        <a href="/mute-ante/interests">about</a> to-do<br>
         <a href="/mute-ante/musicians">musicians</a> good music people<br>
         <a href="/mute-ante/websites">websites</a> cool websites i've collected<br>
         <a href="/mute-ante/blender">blender</a> things i've made in blender<br>
+        <a href="/mute-ante/sitelog">sitelog</a> changes to the site<br>
+        <br><br>
         <a href="/mute-ante/nimi-mute">nimi mute</a> texts in toki pona<br>
+        <a href="/mute-ante/i/buttons">buttons</a> links to other websites<br>
+        <a href="/mute-ante/i/doodles">doodles</a> some drawings i guess<br>
+        <a href="/mute-ante/i/misc">misc</a> why it matters<br>
         <a href="/mute-ante/difference">difference</a> why it matters<br>
         <a href="https://cvni81.123guestbook.com/">guestbook</a> say hi!<br>
-        <a href="/mute-ante/sitelog">sitelog</a> changes to the site<br>
-        <a href="/mute-ante/i">{i} (the basement)</a>
     </div>
     </div>
     </body>
