--- a/indexnew.html
+++ b/indexnew.html
@@ -37,14 +37,15 @@
         <a href="/mute-ante/musicians">musicians</a> good music people<br>
         <a href="/mute-ante/websites">websites</a> cool websites i've collected<br>
         <a href="/mute-ante/blender">blender</a> things i've made in blender<br>
-        <a href="/mute-ante/sitelog">sitelog</a> changes to the site<br>
         <br><br>
         <a href="/mute-ante/nimi-mute">nimi mute</a> texts in toki pona<br>
         <a href="/mute-ante/i/buttons">buttons</a> links to other websites<br>
         <a href="/mute-ante/i/doodles">doodles</a> some drawings i guess<br>
-        <a href="/mute-ante/i/misc">misc</a> why it matters<br>
+        <a href="/mute-ante/i/misc">misc</a> other things<br>
         <a href="/mute-ante/difference">difference</a> why it matters<br>
+        <br><br>
         <a href="https://cvni81.123guestbook.com/">guestbook</a> say hi!<br>
+        <a href="/mute-ante/sitelog">sitelog</a> changes to the site<br>
     </div>
     </div>
     </body>
