--- a/indexnew.html
+++ b/indexnew.html
@@ -3,6 +3,7 @@
     <head>
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet"> 
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&display=swap" rel="stylesheet">
         <meta charset="UTF-8">
         <title>cvni81</title>
         <link href="/mute-ante/style.css" rel="stylesheet" type="text/css" media="all"><style>
@@ -14,6 +15,11 @@
             grid-template-columns: 350px 1px auto}
             body{min-height:100vh;
             margin:0px;}
+            .misc{color: #f0f0f0;
+            font-family: 'Space Grotesk', sans-serif;}
+            a.misc{font-style: italic;}
+            a.misc:hover{color: #15c405;
+            text-decoration-color: #15c405;}
 
         </style></head>
 
@@ -32,7 +38,7 @@
     <p><b>discord</b>: @cvni81#4837<br><b>email</b>: cvni81@gmail.com</p>
     </div>
     <div style="border:solid #f0f0f0 2px"></div>
-    <div style="font-size:x-large; padding-left: 20px; margin: auto 0;">
+    <div style="font-size:x-large; padding-left: 50px; margin: auto 0;">
         <a href="/mute-ante/interests">about</a> to-do<br>
         <a href="/mute-ante/musicians">musicians</a> good music people<br>
         <a href="/mute-ante/websites">websites</a> cool websites i've collected<br>
