--- a/indexnew.html
+++ b/indexnew.html
@@ -47,7 +47,7 @@
         <a href="/mute-ante/nimi-mute">nimi mute</a> texts in toki pona<br>
         <a href="/mute-ante/i/buttons">buttons</a> links to other websites<br>
         <a href="/mute-ante/i/doodles">doodles</a> some drawings i guess<br>
-        <a href="/mute-ante/i/misc">misc</a> other things<br>
+        <span class="misc"><a href="/mute-ante/i/misc">misc</a> other things</span><br>
         <a href="/mute-ante/difference">difference</a> why it matters<br>
         <br><br>
         <a href="https://cvni81.123guestbook.com/">guestbook</a> say hi!<br>
