--- a/indexnew.html
+++ b/indexnew.html
@@ -17,9 +17,13 @@
             margin:0px;}
             .misc{color: #f0f0f0;
             font-family: 'Space Grotesk', sans-serif;}
-            a.misc{font-style: italic;}
+            a.misc, a.i{font-style: italic;}
             a.misc:hover{color: #15c405;
             text-decoration-color: #15c405;}
+            .i{font-family: 'Libre Baskerville', serif}
+            a.i::after{content: "}"; color: #808080;}
+            a.i::after:hover, a.i::before:hover{color: #f0f0f0}
+            a.i::before{content: "{"; color: #808080;}
 
         </style></head>
 
@@ -45,9 +49,9 @@
         <a href="/mute-ante/blender">blender</a> things i've made in blender<br>
         <br><br>
         <a href="/mute-ante/nimi-mute">nimi mute</a> texts in toki pona<br>
-        <a href="/mute-ante/i/buttons">buttons</a> links to other websites<br>
-        <a href="/mute-ante/i/doodles">doodles</a> some drawings i guess<br>
-        <span class="misc"><a href="/mute-ante/i/misc" class="misc">misc</a> other things</span>\<br>
+        <span class="i"><a href="/mute-ante/i/buttons" class="i">buttons</a> links to other websites</span><br>
+        <span class="i"><a href="/mute-ante/i/doodles" class="i">doodles</a> some drawings i guess</span><br>
+        <span class="misc"><a href="/mute-ante/i/misc" class="misc">misc</a> other things</span><br>
         <a href="/mute-ante/difference">difference</a> why it matters<br>
         <br><br>
         <a href="https://cvni81.123guestbook.com/">guestbook</a> say hi!<br>
