--- a/indexnew.html
+++ b/indexnew.html
@@ -4,6 +4,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet"> 
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap" rel="stylesheet"> 
         <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
         <meta charset="UTF-8">
         <title>cvni81</title>
         <link href="/mute-ante/style.css" rel="stylesheet" type="text/css" media="all"><style>
