--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
         <title>about</title>
         <link href="/mute-ante/style.css" rel="stylesheet" type="text/css" media="all">
     <style>
-        body{display: flex; flex-direction: row}
+        body{display: flex; flex-direction: row; margin: 0px}
         nav{padding: 0 20px; background-color:#202020; min-height: 100vh; border-right: solid #f0f0f0 2px}
     </style></head>
 
