--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
         <link href="/mute-ante/style.css" rel="stylesheet" type="text/css" media="all">
     <style>
         body{display: flex; flex-direction: row; margin: 0px}
-        nav{padding: 0 20px; background-color:#202020; min-height: 100vh; border-right: solid #f0f0f0 2px}
+        nav{padding: 20px; background-color:#202020; min-height: 100vh; border-right: solid #f0f0f0 2px}
     </style></head>
 
     <body>
