--- a/indexnew.html
+++ b/indexnew.html
@@ -40,7 +40,7 @@
     </div>
     <div style="border:solid #f0f0f0 2px"></div>
     <div style="font-size:x-large; padding-left: 50px; margin: auto 0;">
-        <a href="/mute-ante/interests">about</a> to-do<br>
+        <a href="/mute-ante/about">about</a> to-do<br>
         <a href="/mute-ante/musicians">musicians</a> good music people<br>
         <a href="/mute-ante/websites">websites</a> cool websites i've collected<br>
         <br><br>
