--- a/about.html
+++ b/about.html
@@ -12,5 +12,17 @@
     </style></head>
 
     <body>
-        <nav>h<br>h<br>h</nav>
+        <nav>
+            <a href="/mute-ante/about">about</a><br>
+            <a href="/mute-ante/musicians">musicians</a><br>
+            <a href="/mute-ante/websites">websites</a><br>
+            <br>
+            <a href="/mute-ante/nimi-mute">nimi mute</a><br>
+            <a href="/mute-ante/blender">blender</a><br>
+            <a href="/mute-ante/i/doodles">doodles</a><br>
+            <a href="/mute-ante/i/misc">misc</a><br>
+            <br>
+            <a href="/mute-ante/i/buttons">buttons</a><br>
+            <a href="/mute-ante/sitelog">sitelog</a><br>
+        </nav>
     </body>
