--- a/about.html
+++ b/about.html
@@ -13,6 +13,8 @@
 
     <body>
         <nav>
+            <a href="/mute-ante">home</a><br>
+            <br>
             <a href="/mute-ante/about">about</a><br>
             <a href="/mute-ante/musicians">musicians</a><br>
             <a href="/mute-ante/websites">websites</a><br>
