--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
     <style>
         body{display: flex; flex-direction: row; margin: 0px}
         nav{padding: 20px; background-color:#202020; min-height: 100vh; border-right: solid #f0f0f0 2px}
+        h1{font-size: xxx-large; font-style: normal; margin-top: 20px}
     </style></head>
 
     <body>
@@ -27,4 +28,5 @@
             <a href="/mute-ante/i/buttons">buttons</a><br>
             <a href="/mute-ante/sitelog">sitelog</a><br>
         </nav>
+    <h1>about me</h1>
     </body>
