--- a/about.html
+++ b/about.html
@@ -10,6 +10,7 @@
         body{display: flex; flex-direction: row; margin: 0px}
         nav{padding: 20px; background-color:#202020; min-height: 100vh; border-right: solid #f0f0f0 2px; margin-right: 50px}
         h1{font-size: xxx-large; font-style: normal; margin-top: 20px}
+        p{max-width: 750px;}
     </style></head>
 
     <body>
@@ -29,4 +30,19 @@
             <a href="/mute-ante/sitelog">sitelog</a><br>
         </nav>
     <h1>about me</h1>
+    <p>Hi! I'm cvni81 ("mute ante" in toki pona), and this is my website thing.<br>
+    I speak Portuguese (native), English (near-native) and toki pona (proficient).<br>
+    (toki pona is a little (heh) constructed language that has just 137 words! It's super easy to learn (obvs), and i highly recomment you do!)<br>
+    Also, i've liked coding for a while now; mainly in python and pygame mostly because they're easy, making things that are kinda just meant to stay in the background and look pretty 
+    (maybe i'll even put them here in my website, maybe), but now also html and css i guess!<br>
+    Favorite passtimes include: 
+    <ul>
+        <li>Chatting in Discord;</li><br>
+        <li>Listening to music;</li><br>
+        <li>Working on this website;</li><br>
+        <li>Composing stuffs in Beepbox;</li><br>
+        <li>Doodling things;</li><br>
+        <li>Seeing new places and taking photos of them.</li><br>
+    Other things i'm (maybe tangentially) interested in include (but aren't limited to) flags, botany, design, typography and languages. A bunch of stuff.<br>
+    Regarding gender and things, i'm... kinda confused. Non-binary i guess. Use they/them just to be sure.</p>
     </body>
