--- a/indexnew.html
+++ b/indexnew.html
@@ -29,13 +29,9 @@
     <div style="padding: 0px 20px; background-color: #202020; min-height:100vh">
     <h1 style="text-shadow:#080808 5px 5px">cvni81's website</h1>
     <p>Hi! Welcome to my corner of the web where i put stuff i like, stuff i do and other things too!<br>
-    Making this website has been really fun, and i hope you like having a gander at it.<br></p>
-    <details><summary>(put this stuff in an about page i guess)</summary>
-    I speak Portuguese (native), English (near-native) and toki pona (proficient).<br>
-    Also, i've liked coding for a while now; mainly in python and pygame mostly because they're easy, but now also html and css i guess!<br>
-    Favorite passtimes include: (ul)chatting in discord, listening to music, working on this website, composing stuffs in beepbox, doodling things and seeing new places!(/ul)<br>
-    Regarding gender and things, i'm... kinda confused. Non-binary i guess. Use they/them just to be sure.</details>
-    <p>This thing has been pretty much always in construction since i've started it, so things may appear and disappear from time to time. It's normal around here i guess.<br>Make yourself at home!</p>
+    Making this website has been really fun, and i hope you like having a gander at it.<br>
+    This thing has been pretty much always in construction since i've started it, so things may appear and disappear from time to time. It's normal around here i guess.<br>Make yourself at home!<br>
+    Also: they/them, pt-br, en, tok, <18yo</p>
     <p><b>discord</b>: @cvni81#4837<br><b>email</b>: cvni81@gmail.com</p>
     </div>
     <div style="border:solid #f0f0f0 2px"></div>
