--- a/about.html
+++ b/about.html
@@ -29,6 +29,7 @@
             <a href="/mute-ante/i/buttons">buttons</a><br>
             <a href="/mute-ante/sitelog">sitelog</a><br>
         </nav>
+    <div>
     <h1>about me</h1>
     <p>Hi! I'm cvni81 ("mute ante" in toki pona), and this is my website thing.<br>
     I speak Portuguese (native), English (near-native) and toki pona (proficient).<br>
@@ -45,4 +46,4 @@
         <li>Seeing new places and taking photos of them.</li><br>
     Other things i'm (maybe tangentially) interested in include (but aren't limited to) flags, botany, design, typography and languages. A bunch of stuff.<br>
     Regarding gender and things, i'm... kinda confused. Non-binary i guess. Use they/them just to be sure.</p>
-    </body>
+    </div></body>
