--- a/about.html
+++ b/about.html
@@ -38,11 +38,11 @@
     (maybe i'll even put them here in my website, maybe), but now also html and css i guess!<br>
     Favorite passtimes include: 
     <ul>
-        <li>Chatting in Discord;</li><br>
-        <li>Listening to music;</li><br>
-        <li>Working on this website;</li><br>
-        <li>Composing stuffs in Beepbox;</li><br>
-        <li>Doodling things;</li><br>
+        <li>Chatting in Discord;</li>
+        <li>Listening to music;</li>
+        <li>Working on this website;</li>
+        <li>Composing stuffs in Beepbox;</li>
+        <li>Doodling things;</li>
         <li>Seeing new places and taking photos of them.</li><br>
     Other things i'm (maybe tangentially) interested in include (but aren't limited to) flags, botany, design, typography and languages. A bunch of stuff.<br>
     Regarding gender and things, i'm... kinda confused. Non-binary i guess. Use they/them just to be sure.</p>
