--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
         <li>Working on this website;</li>
         <li>Composing stuffs in Beepbox;</li>
         <li>Doodling things;</li>
-        <li>Seeing new places and taking photos of them.</li><br>
+        <li>Seeing new places and taking photos of them.</li></ul><br>
     Other things i'm (maybe tangentially) interested in include (but aren't limited to) flags, botany, design, typography and languages. A bunch of stuff.<br>
     Regarding gender and things, i'm... kinda confused. Non-binary i guess. Use they/them just to be sure.</p>
     </div></body>
