--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
     I speak Portuguese (native), English (near-native) and toki pona (proficient).<br>
     (toki pona is a little (heh) constructed language that has just 137 words! It's super easy to learn , and i highly recomment you do!)<br>
     Also, i've liked coding for a while now; mainly in python and pygame mostly because they're easy, making things that are kinda just meant to stay in the background and look pretty 
-    (maybe i'll even put them here in my website, maybe), but now also html and css i guess!</p><br>
+    (maybe i'll even put them here in my website, maybe), but now also html and css i guess!</p>
     Favorite passtimes include: 
     <ul>
         <li>Chatting in Discord;</li>
@@ -43,7 +43,7 @@
         <li>Working on this website;</li>
         <li>Composing stuffs in Beepbox;</li>
         <li>Doodling things;</li>
-        <li>Seeing new places and taking photos of them.</li></ul><br>
+        <li>Seeing new places and taking photos of them.</li></ul>
     <p>Other things i'm (maybe tangentially) interested in include (but aren't limited to) flags, botany, design, typography and languages. A bunch of stuff.<br>
     Regarding gender and things, i'm... kinda confused. Non-binary i guess. Use they/them just to be sure.</p>
     </div></body>
