--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
         body{display: flex; flex-direction: row; margin: 0px}
         nav{padding: 20px; background-color:#202020; min-height: 100vh; border-right: solid #f0f0f0 2px; margin-right: 50px}
         h1{font-size: xxx-large; font-style: normal; margin-top: 20px}
-        p{max-width: 750px; line-height: 1.5;}
+        p, ul{max-width: 750px; line-height: 1.5;}
     </style></head>
 
     <body>
