--- a/about.html
+++ b/about.html
@@ -8,13 +8,13 @@
         <link href="/mute-ante/style.css" rel="stylesheet" type="text/css" media="all">
     <style>
         body{display: flex; flex-direction: row; margin: 0px}
-        nav{padding: 20px; background-color:#202020; min-height: 100vh; border-right: solid #f0f0f0 2px; margin-right: 50px}
+        nav{padding: 0px; background-color:#202020; min-height: 100vh; border-right: solid #f0f0f0 2px; margin-right: 50px}
         h1{font-size: xxx-large; font-style: normal; margin-top: 20px; text-shadow: #202020 5px 5px}
         p, ul{max-width: 750px; line-height: 1.5;}
     </style></head>
 
     <body>
-        <nav>
+        <nav><div style="margin: 20px">
             <a href="/mute-ante">home</a><br>
             <br>
             <a href="/mute-ante/about">about</a><br>
@@ -28,7 +28,7 @@
             <br>
             <a href="/mute-ante/i/buttons">buttons</a><br>
             <a href="/mute-ante/sitelog">sitelog</a><br>
-        </nav>
+        </nav></div>
     <div>
     <h1>about me</h1>
     <p>Hi! I'm cvni81 ("mute ante" in toki pona), and this is my website thing.<br>
