--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8">
         <title>about</title>
-        <link href="/mute-ante/style.css" rel="stylesheet" type="text/css" media="all">
+        <link href="/website/style.css" rel="stylesheet" type="text/css" media="all">
     <style>
         body{display: flex; flex-direction: row; margin: 0px}
         nav{padding: 0px; background-color:#202020; min-height: 100vh; border-right: solid #f0f0f0 2px; margin-right: 50px}
@@ -15,19 +15,19 @@
 
     <body>
         <nav><div style="margin: 20px">
-            <a href="/mute-ante">home</a><br>
+            <a href="/website">home</a><br>
             <br>
-            <a href="/mute-ante/about">about</a><br>
-            <a href="/mute-ante/musicians">musicians</a><br>
-            <a href="/mute-ante/websites">websites</a><br>
+            <a href="/website/about">about</a><br>
+            <a href="/website/musicians">musicians</a><br>
+            <a href="/website/websites">websites</a><br>
             <br>
-            <a href="/mute-ante/nimi-mute">nimi mute</a><br>
-            <a href="/mute-ante/blender">blender</a><br>
-            <a href="/mute-ante/i/doodles">doodles</a><br>
-            <a href="/mute-ante/i/misc">misc</a><br>
+            <a href="/website/nimi-mute">nimi mute</a><br>
+            <a href="/website/blender">blender</a><br>
+            <a href="/website/i/doodles">doodles</a><br>
+            <a href="/website/i/misc">misc</a><br>
             <br>
-            <a href="/mute-ante/i/buttons">buttons</a><br>
-            <a href="/mute-ante/sitelog">sitelog</a><br>
+            <a href="/website/i/buttons">buttons</a><br>
+            <a href="/website/sitelog">sitelog</a><br>
         </nav></div>
     <div>
     <h1>about me</h1>
@@ -39,10 +39,10 @@
     Favorite passtimes include: 
     <ul>
         <li>Chatting in Discord;</li>
-        <li>Listening to <a href="/mute-ante/musicians">music</a>;</li>
+        <li>Listening to <a href="/website/musicians">music</a>;</li>
         <li>Working on this website;</li>
         <li>Composing stuffs in Beepbox;</li>
-        <li><a href="/mute-ante/i/doodles">Doodling things</a>;</li>
+        <li><a href="/website/i/doodles">Doodling things</a>;</li>
         <li>Seeing new places and taking photos of them.</li></ul>
     <p>Other things i'm (maybe tangentially) interested in include (but aren't limited to) flags, botany, design, typography and languages. A bunch of stuff.<br>
     Regarding gender and things, i'm... kinda confused. Non-binary i guess. Use they/them just to be sure.</p>
