--- a/index.html
+++ b/index.html
@@ -3,47 +3,47 @@
     <head>
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet"> 
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
         <meta charset="UTF-8">
-        <title>≠</title>
-        <link href="/mute-ante/style.css" rel="stylesheet" type="text/css" media="all">
-    <style>
-        a.inverted:hover{background: #080808; color: #F0F0F0; font-weight: bold;}
-        a.inverted{
-        background: #F0F0F0;
-        color: #080808;
-        text-decoration-color: #F0F0F0; 
-        font-weight: bold;}
-        .this-container{
-            width: 600px;
-            padding: 20px;
-            margin: 15px;
-            border: solid #F0F0F0 2px;
-            border-radius: 30px;
-            line-height: 1.5;
-            text-align: center;
-            }
-
-    </style></head>
+        <title>cvni81</title>
+        <link href="/website/tyles/style.css" rel="stylesheet" type="text/css" media="all"><style>
+            .all{display: grid;
+            grid-template-columns: 350px 1px auto}
+            body{min-height:100vh;
+            margin:0px;}
+            .misc{color: #f0f0f0;
+            font-family: 'Space Grotesk', sans-serif;}
+            a.misc, a.i{font-style: italic;}
+            a.misc:hover{color: #15c405;
+            text-decoration-color: #15c405;}
+            .i{font-family: 'Libre Baskerville', serif}
+        </style></head>
 
     <body>
-    <div style="position: absolute; left: 50%; bottom: 50%; transform: translate(-50%, 50%);">
-    <div class="this-container">
-        <h1>cvni81 / mute ante</h1>
-        <p>seize the day · pt-br, en-4, tok-3 · <18yo, they/them</p>
-        <a href="http://discordapp.com/users/691348576093077535" class="discord" style="font-size:larger" title="talk to me">discord</a> <b>·</b> 
-        <a href="mailto:cvni1981@gmail.com" style="font-size:larger" title="talk to me but slower">email</a> <b>·</b> 
-        <a href="https://open.spotify.com/user/1tqpqbcrw16yda1b4kc4nuu92" class="spotify" style="font-size:larger" title="music i like">spotify</a> <b>·</b> 
-        <a href="https://bandcamp.com/cvni1981" class="bandcamp" style="font-size:larger" title="music i like enough to purchase">bandcamp (fan)</a> <b>·</b> 
-        <a href="https://status.cafe/users/cvni81" class="cafe" style="font-size:larger" title="things i feel like telling people">status.cafe</a><br>
-        <p style="margin-bottom: 8px;">Hi! This is a place where i put stuff and people i like, as well as some things i've made. Always trying to get better at talking about myself. If you want to talk to me for some reason, do so through discord (@cvni81#4837), i'm very active there! <span style="color:#05a1fc">●</span><span style="color:#fc074c">●</span><span style="color:#ffb400">●</span></p></div>
-    <div class="this-container" style="font-size:larger">
-            <a href="/mute-ante/interests">interests</a> things i'm interested in<br>
-            <a href="/mute-ante/musicians">musicians</a> good music people<br>
-            <a href="/mute-ante/websites">websites</a> cool websites i've collected<br>
-            <a href="/mute-ante/blender">blender</a> things i've made in blender<br>
-            <a href="/mute-ante/nimi-mute">nimi mute</a> texts in toki pona<br>
-            <a href="/mute-ante/difference">difference</a> why it matters<br>
-            <a href="https://cvni81.123guestbook.com/">guestbook</a> say hi!<br>
-            <a href="/mute-ante/sitelog">sitelog</a> changes to the site<br>
-            <a href="/mute-ante/i" class="inverted">{i} (the basement)</a></div></div>
-    </div></body>
+    <div class="all">
+    <div style="padding: 0px 20px; background-color: #202020; min-height:100vh">
+    <h1 style="text-shadow:#080808 5px 5px">cvni81's website</h1>
+    <p>Hi! Welcome to my corner of the web where i put stuff i like, stuff i do and other things too!<br>
+    Making this website has been really fun, and i hope you like having a gander at it.<br>
+    This thing has been pretty much always in construction since i've started it, so things may appear and disappear from time to time. It's normal around here i guess.<br>Make yourself at home!<br>
+    Also: they/them, pt-br, en, tok, <18yo</p>
+    <p><b>discord</b>: @cvni81#4837<br><b>email</b>: cvni81@gmail.com</p>
+    </div>
+    <div style="border:solid #f0f0f0 2px"></div>
+    <div style="font-size:x-large; padding-left: 50px; margin: auto 0;">
+        <a href="/website/about">about</a> to-do<br>
+        <a href="/website/musicians">musicians</a> good music people<br>
+        <a href="/website/websites">websites</a> cool websites i've collected<br>
+        <br><br>
+        <a href="/website/nimi-mute">nimi mute</a> texts in toki pona<br>
+        <a href="/website/blender">blender</a> things i've made in blender<br>
+        <span class="i"><a href="/website/i/doodles" class="i">doodles</a> some drawings i guess</span><br>
+        <span class="misc"><a href="/website/i/misc" class="misc">misc</a> other things</span><br>
+        <br><br>
+        <span class="i"><a href="/website/i/buttons" class="i">buttons</a> links to other websites</span><br>
+        <a href="https://cvni81.123guestbook.com/">guestbook</a> say hi!<br>
+        <a href="/website/sitelog">sitelog</a> changes to the site<br>
+    </div>
+    </div>
+    </body>
