--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8">
         <title>about</title>
-        <link href="/website/style.css" rel="stylesheet" type="text/css" media="all">
+        <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all">
     <style>
         body{display: flex; flex-direction: row; margin: 0px}
         nav{padding: 0px; background-color:#202020; min-height: 100vh; border-right: solid #f0f0f0 2px; margin-right: 50px}
