--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
         <meta charset="UTF-8">
         <title>cvni81</title>
-        <link href="/website/tyles/style.css" rel="stylesheet" type="text/css" media="all"><style>
+        <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
             .all{display: grid;
             grid-template-columns: 350px 1px auto}
             body{min-height:100vh;
