--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </div>
     <div style="border:solid #f0f0f0 2px"></div>
     <div style="font-size:x-large; padding-left: 50px; margin: auto 0;">
-        <a href="/website/about">about</a> to-do<br>
+        <a href="/website/about">about</a> stuff about me<br>
         <a href="/website/musicians">musicians</a> good music people<br>
         <a href="/website/websites">websites</a> cool websites i've collected<br>
         <br>
