--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
             <br>
             <a href="/website/i/buttons">buttons</a><br>
             <a href="/website/sitelog">sitelog</a><br>
-        </nav></div>
+        </div></nav>
     <div>
     <h1>about me</h1>
     <p>Hi! I'm cvni81 ("mute ante" in toki pona), and this is my website thing.<br>
