--- a/websites.html
+++ b/websites.html
@@ -5,18 +5,24 @@
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8">
         <title>websites</title>
-        <link href="/mute-ante/style.css" rel="stylesheet" type="text/css" media="all"></head>
+        <link href="/mute-ante/styles/style.css" rel="stylesheet" type="text/css" media="all"></head>
 
-        <body><header><nav>
-            <a href="/mute-ante">home</a> <b>:</b>
-            <a href="/mute-ante/interests">interests</a> · 
-            <a href="/mute-ante/musicians">musicians</a> · 
-            <a href="/mute-ante/blender">blender</a> · 
-            <a href="/mute-ante/nimi-mute">nimi mute</a> · 
-            <a href="/mute-ante/difference">difference</a> · 
-            <a href="/mute-ante/sitelog">sitelog</a>
-        </nav></header>
-        <div class="container">
+        <body><nav><div style="margin: 20px">
+            <a href="/website">home</a><br>
+            <br>
+            <a href="/website/about">about</a><br>
+            <a href="/website/musicians">musicians</a><br>
+            <a href="/website/websites">websites</a><br>
+            <br>
+            <a href="/website/nimi-mute">nimi mute</a><br>
+            <a href="/website/blender">blender</a><br>
+            <a href="/website/i/doodles">doodles</a><br>
+            <a href="/website/i/misc">misc</a><br>
+            <br>
+            <a href="/website/i/buttons">buttons</a><br>
+            <a href="/website/sitelog">sitelog</a><br>
+        </div></nav>
+        <div>
         <h1>cool websites</h1>
         <hr>
         <p>Some neat websites i've collected that are either fun or interesting. Add them to your bookmarks today!</p>
