--- a/websites.html
+++ b/websites.html
@@ -5,7 +5,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8">
         <title>websites</title>
-        <link href="/mute-ante/styles/style.css" rel="stylesheet" type="text/css" media="all"></head>
+        <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all"></head>
 
         <body><nav><div style="margin: 20px">
             <a href="/website">home</a><br>
@@ -24,12 +24,11 @@
         </div></nav>
         <div>
         <h1>cool websites</h1>
-        <hr>
         <p>Some neat websites i've collected that are either fun or interesting. Add them to your bookmarks today!</p>
-        <h2>→ <a href="/mute-ante/websites/math">math and physics (15)</a></h2>
-        <h2>→ <a href="/mute-ante/websites/lang">language (5)</a></h2>
-        <h2>→ <a href="/mute-ante/websites/geo">geography and flags (4)</a></h2>
-        <h2>→ <a href="/mute-ante/websites/misc">miscellaneously interesting (11)</a></h2>
+        <h2>→ <a href="/website/websites/math">math and physics (15)</a></h2>
+        <h2>→ <a href="/website/websites/lang">language (5)</a></h2>
+        <h2>→ <a href="/website/websites/geo">geography and flags (4)</a></h2>
+        <h2>→ <a href="/website/websites/misc">miscellaneously interesting (11)</a></h2>
 
         <p>I try to put credit wherever i can. If i did something wrong or you have a cool website or two you want to share, do so through my <a href="http://discordapp.com/users/691348576093077535" class="discord">discord</a> or <a href="mailto:cvni1981@gmail.com">email</a>!</p>
     </div></body>
