added main class

--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
             <a href="/website/i/buttons">buttons</a><br>
             <a href="/website/sitelog">sitelog</a><br>
         </div></nav>
-    <div>
+    <div class="main">
     <h1>about me</h1>
     <p>Hi! I'm cvni81 ("mute ante" in toki pona), and this is my website thing.<br>
     I speak Portuguese (native), English (near-native) and toki pona (proficient).<br>
