--- a/musicians.html
+++ b/musicians.html
@@ -21,7 +21,7 @@
             <a href="/website/i/buttons">buttons</a><br>
             <a href="/website/sitelog">sitelog</a><br>
         </div></nav>
-        <div><h1>favorite musicians</h1>
+        <div class="main"><h1>favorite musicians</h1>
         <ul>
             <li><a href="https://radiohead.bandcamp.com/" class="bandcamp">
                 Radiohead</a>: an experimental rock band making awesome songs since the 90s.<br></li>
