--- a/websites.html
+++ b/websites.html
@@ -22,7 +22,7 @@
             <a href="/website/i/buttons">buttons</a><br>
             <a href="/website/sitelog">sitelog</a><br>
         </div></nav>
-        <div>
+        <div class="main">
         <h1>cool websites</h1>
         <p>Some neat websites i've collected that are either fun or interesting. Add them to your bookmarks today!</p>
         <h2>→ <a href="/website/websites/math">math and physics (15)</a></h2>
