--- a/websites/geo.html
+++ b/websites/geo.html
@@ -5,9 +5,24 @@
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8">
         <title>websites: geography</title>
-        <link href="/mute-ante/style.css" rel="stylesheet" type="text/css" media="all"></head>
+        <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all"></head>
 
-    <body><div class="container">
+    <body><nav><div style="margin: 20px">
+        <a href="/website">home</a><br>
+        <br>
+        <a href="/website/about">about</a><br>
+        <a href="/website/musicians">musicians</a><br>
+        <a href="/website/websites">websites</a><br>
+        <br>
+        <a href="/website/nimi-mute">nimi mute</a><br>
+        <a href="/website/blender">blender</a><br>
+        <a href="/website/i/doodles">doodles</a><br>
+        <a href="/website/i/misc">misc</a><br>
+        <br>
+        <a href="/website/i/buttons">buttons</a><br>
+        <a href="/website/sitelog">sitelog</a><br>
+    </div></nav>
+    <div class="main">
         <h1>geography and flags</h1>
         <hr>
         <h2>→ <a href="https://www.jasondavies.com/maps/transition/">Map Projection Transitions</a></h2>
@@ -21,6 +36,4 @@
 
         <h2>→ <a href="https://heywhatsthat.com/">HeyWhatsThat</a></h2>
         <p>A neat tool that shows how far you can see from a location, as well as what peaks can be seen.</p>
-
-        <p> ⇤ <a href="/mute-ante/websites">go back</a></p>
     </div></body>
