--- a/websites/misc.html
+++ b/websites/misc.html
@@ -4,10 +4,25 @@
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet"> 
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8">
-        <title>websites: etc</title>
-        <link href="/mute-ante/style.css" rel="stylesheet" type="text/css" media="all"></head>
+        <title>websites: misc</title>
+        <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all"></head>
 
-    <body><div class="container">
+    <body><nav><div style="margin: 20px">
+        <a href="/website">home</a><br>
+        <br>
+        <a href="/website/about">about</a><br>
+        <a href="/website/musicians">musicians</a><br>
+        <a href="/website/websites">websites</a><br>
+        <br>
+        <a href="/website/nimi-mute">nimi mute</a><br>
+        <a href="/website/blender">blender</a><br>
+        <a href="/website/i/doodles">doodles</a><br>
+        <a href="/website/i/misc">misc</a><br>
+        <br>
+        <a href="/website/i/buttons">buttons</a><br>
+        <a href="/website/sitelog">sitelog</a><br>
+    </div></nav>
+    <div class="main">
         <h1>miscellaneously interesting</h1>
         <hr>
         <h2>→ <a href="https://www.montereybayaquarium.org/animals/live-cams/sea-otter-cam">Sea Otter Live Cam</a></h2>
@@ -42,6 +57,4 @@
 
         <h2>→ <a href="https://closinglogosgroup.miraheze.org/wiki/Main_Page">CLG Wiki</a></h2>
         <p>A wiki dedicated to collecting closing production logos and TV ID's from around the world.</p>
-
-        <p> ⇤ <a href="/mute-ante/websites">go back</a></p>
     </div></body>
