--- a/websites/lang.html
+++ b/websites/lang.html
@@ -5,9 +5,24 @@
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8">
         <title>websites: language</title>
-        <link href="/mute-ante/style.css" rel="stylesheet" type="text/css" media="all"></head>
+        <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all"></head>
 
-    <body><div class="container">
+    <body><nav><div style="margin: 20px">
+        <a href="/website">home</a><br>
+        <br>
+        <a href="/website/about">about</a><br>
+        <a href="/website/musicians">musicians</a><br>
+        <a href="/website/websites">websites</a><br>
+        <br>
+        <a href="/website/nimi-mute">nimi mute</a><br>
+        <a href="/website/blender">blender</a><br>
+        <a href="/website/i/doodles">doodles</a><br>
+        <a href="/website/i/misc">misc</a><br>
+        <br>
+        <a href="/website/i/buttons">buttons</a><br>
+        <a href="/website/sitelog">sitelog</a><br>
+    </div></nav>
+    <div class="main">
         <h1>language</h1>
         <hr>
         <h2>→ <a href="https://decodeunicode.org/">decodeunicode</a></h2>
@@ -24,6 +39,4 @@
 
         <h2>→ <a href="https://arxiv.org/pdf/1012.5962.pdf">Annotated  English</a></h2>
         <p>A paper by José Hernández-Orallo with a way to write English with unambiguous spelling.</p>
-
-        <p> ⇤ <a href="/mute-ante/websites">go back</a></p>
     </div></body>
