--- a/misc.html
+++ b/misc.html
@@ -4,7 +4,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8">
         <title>> misc</title>
-        <link href="/mute-ante/i/miscstyle.css" rel="stylesheet" type="text/css" media="all"></head>
+        <link href="/website/styles/miscstyle.css" rel="stylesheet" type="text/css" media="all"></head>
     <body>
 
     <h1>misc</h1>
