--- a/misc/phrases.html
+++ b/misc/phrases.html
@@ -4,7 +4,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8">
         <title>> wall</title>
-        <link href="/mute-ante/i/miscstyle.css" rel="stylesheet" type="text/css" media="all">
+        <link href="/website/styles/miscstyle.css" rel="stylesheet" type="text/css" media="all">
     <style>
         #notes{display: grid;
             grid-template-columns: auto auto auto auto auto auto;
