--- a/misc.html
+++ b/misc.html
@@ -14,9 +14,9 @@
         <br>You see a drawing table. On it is a notebook and a folder. Besides the table is a wall covered in sticky notes.
     </p>
         <ul>
-            <li><a href="/mute-ante/i/misc/journal">open the notebook</a></li>
-            <li><a href="/mute-ante/i/misc/phrases">look at the sticky notes</a></li>
-            <li><a href="/mute-ante/i/misc/folder">open the folder</a></li>
-            <li><a href="/mute-ante/i">walk back out the door</a></li>
+            <li><a href="/website/misc/journal">open the notebook</a></li>
+            <li><a href="/website/misc/phrases">look at the sticky notes</a></li>
+            <li><a href="/website/misc/folder">open the folder</a></li>
+            <li><a href="/website">walk back out the door</a></li>
         </ul>
     </body>
