--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8">
         <title>≠</title>
-        <link href="/mute-ante/style.css" rel="stylesheet" type="text/css" media="all">
+        <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all">
     <style>
 
         .this-container{
@@ -18,7 +18,7 @@
     </style></head>
 
     <body><div class="this-container">
-        <img src="/mute-ante/walking.gif" alt="walking"><br>
+        <img src="/website/walking.gif" alt="walking"><br>
         <span style="text-align: center;">this page doesn't exist<br>how did you get here<br><a href="/mute-ante">back to homepage</a></span>
     </div>
     </body>
