--- a/misc/phrases.html
+++ b/misc/phrases.html
@@ -21,7 +21,7 @@
 
     <h1>wall</h1>
     <p>You look closer at the sticky notes on the wall.
-    <br>> <a href="/mute-ante/i/misc">go back</a>
+    <br>> <a href="/websites/misc">go back</a>
     </p>
     <div id="notes">
         <div>I wonder if anyone's ever come down here</div>
