--- a/websites.html
+++ b/websites.html
@@ -16,10 +16,10 @@
             <br>
             <a href="/website/nimi-mute">nimi mute</a><br>
             <a href="/website/blender">blender</a><br>
-            <a href="/website/i/doodles">doodles</a><br>
-            <a href="/website/i/misc">misc</a><br>
+            <a href="/website/doodles">doodles</a><br>
+            <a href="/website/misc">misc</a><br>
             <br>
-            <a href="/website/i/buttons">buttons</a><br>
+            <a href="/website/buttons">buttons</a><br>
             <a href="/website/sitelog">sitelog</a><br>
         </div></nav>
         <div class="main">
