--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
         <br>
         <a href="/website/nimi-mute">nimi mute</a> texts in toki pona<br>
         <a href="/website/blender">blender</a> things i've made in blender<br>
-        <span class="i"><a href="/website/i/doodles" class="i">doodles</a> some drawings i guess</span><br>
-        <span class="misc"><a href="/website/i/misc" class="misc">misc</a> other things</span><br>
+        <span class="i"><a href="/website/doodles" class="i">doodles</a> some drawings i guess</span><br>
+        <span class="misc"><a href="/website/misc" class="misc">misc</a> other things</span><br>
         <br>
-        <span class="i"><a href="/website/i/buttons" class="i">buttons</a> links to other websites</span><br>
+        <span class="i"><a href="/website/buttons" class="i">buttons</a> links to other websites</span><br>
         <a href="/website/sitelog">sitelog</a> changes to the site<br>
     </div>
     </div>
