--- a/404.html
+++ b/404.html
@@ -16,9 +16,9 @@
             text-align: center;}
 
     </style></head>
-
+S
     <body><div class="this-container">
         <img src="/website/walking.gif" alt="walking"><br>
-        <span style="text-align: center;">this page doesn't exist<br>how did you get here<br><a href="/mute-ante">back to homepage</a></span>
+        <span style="text-align: center;">this page doesn't exist<br>how did you get here<br><a href="/website">back to homepage</a></span>
     </div>
     </body>
