--- a/nimi-mute.html
+++ b/nimi-mute.html
@@ -3,31 +3,36 @@
     <head>
         <meta charset="UTF-8">
         <title>nimi mute</title>
-        <link href="/mute-ante/text-style.css" rel="stylesheet" type="text/css" media="all">
+        <link href="/website/styles/text-style.css" rel="stylesheet" type="text/css" media="all">
         <style>@import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400&display=swap');</style> 
     </head>
-        <body><header style="font-size: larger;"><nav>
-            <a href="/mute-ante">home</a> <b>:</b>
-            <a href="/mute-ante/interests">interests</a> · 
-            <a href="/mute-ante/musicians">musicians</a> · 
-            <a href="/mute-ante/websites">websites</a> · 
-            <a href="/mute-ante/blender">blender</a> · 
-            <a href="/mute-ante/difference">difference</a> · 
-            <a href="/mute-ante/sitelog">sitelog</a>
-        </nav></header>
-        <div class="container">
+        <body><nav><div style="margin: 20px">
+            <a href="/website">home</a><br>
+            <br>
+            <a href="/website/about">about</a><br>
+            <a href="/website/musicians">musicians</a><br>
+            <a href="/website/websites">websites</a><br>
+            <br>
+            <a href="/website/nimi-mute">nimi mute</a><br>
+            <a href="/website/blender">blender</a><br>
+            <a href="/website/doodles">doodles</a><br>
+            <a href="/website/misc">misc</a><br>
+            <br>
+            <a href="/website/buttons">buttons</a><br>
+            <a href="/website/sitelog">sitelog</a><br>
+        </div></nav>
+        <div class="main">
         <h1>nimi mute</h1>
-        <hr>
         <p>mi pali e nimi mute ni lon tenpo pini. taso mi pana ala e ona tawa jan. pali nimi li pona e mi a. mi wile e ni: lipu ni li pona tawa sina.
         <br>tenpo kama la mi o pali e nimi mute sin a.
         <br>toki mi li pakala la o toki e ni tawa mi.</p>
         <ul>
-            <li><a href="/mute-ante/nimi-mute/sona-pini">sona pini (nimi 124)</a></li>
-            <li><a href="/mute-ante/nimi-mute/ona">ona (nimi 41)</a></li>
-            <li><a href="/mute-ante/nimi-mute/tomo-ni">tomo ni (nimi 115)</a></li>
-            <li><a href="/mute-ante/nimi-mute/suno">suno (nimi 218)</a></li>
-            <li><a href="/mute-ante/nimi-mute/len-pi-laso-telo">len pi laso telo (nimi 647)</a></li>
-            <li><a href="/mute-ante/nimi-mute/jan">jan (nimi 332)</a></li>
-            <li><a href="/mute-ante/nimi-mute/tomo-pi-esun-lipu">tomo pi esun lipu (nimi 860)</a></li>
+            <li><a href="/website/nimi-mute/sona-pini">sona pini (nimi 124)</a></li>
+            <li><a href="/website/nimi-mute/ona">ona (nimi 41)</a></li>
+            <li><a href="/website/nimi-mute/tomo-ni">tomo ni (nimi 115)</a></li>
+            <li><a href="/website/nimi-mute/suno">suno (nimi 218)</a></li>
+            <li><a href="/website/nimi-mute/len-pi-laso-telo">len pi laso telo (nimi 647)</a></li>
+            <li><a href="/website/nimi-mute/jan">jan (nimi 332)</a></li>
+            <li><a href="/website/nimi-mute/tomo-pi-esun-lipu">tomo pi esun lipu (nimi 860)</a></li>
             </ul>
     </div></body>
